--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Kalakeiton ohje</h1>
-<p>Käy ensin kalassa</p>
-
+<p>Käy ensin kalassa</p><br>
+<img src="next.png" alt="Next computer">
 </body>
 </html>
