--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Nikon kotisivu</title>
+<title>Oma kotisivu</title>
 </head>
 <body>
 
-<h1>Kalakeiton ohje</h1>
-<p>Käy ensin kalassa</p><br>
-<img src="next.png" alt="Next computer">
+<h1>Tämä on otsikko</h1>
+<p>Tämä on kappale.</p><br>
+<img src="pc.png" alt="tietokone"><br>
+<img src="tietokone.svg" alt="tietokone">
 </body>
 </html>
